# prediction_reussite_scolaire

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: cicd.yml
data/: final.csv
fastapi_app/: Dockerfile  crud.py  db.py  main.py  model_loader.py  requirements.txt  schemas.py  transforms.py
fastapi_app/models/: best_model_rf_seed.joblib
fastapi_app/routes/: promote.py  train.py
fastapi_app/tests/: conftest.py  test_health.py  test_predict.py  test_train.py
prometheus/: prometheus.yml
streamlit_app/: Dockerfile  app.py  requirements.txt
