[tool.pytest.ini_options]
testpaths = ["fastapi_app/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:PytestDeprecationWarning",
    "ignore:Pydantic V1 style `@validator` validators are deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["mlruns", "artifacts", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poetry.group.dev.dependencies]
httpx = "^0.24"